@@ -4,21 +4,12 @@ More libstdc++13 build fixes. This should go upstream.
 
 --- a/third_party/blink/renderer/core/paint/fragment_data_iterator.h
 +++ b/third_party/blink/renderer/core/paint/fragment_data_iterator.h
-@@ -52,7 +52,7 @@ class FragmentDataIterator
+@@ -21,7 +21,7 @@ class FragmentDataIteratorBase {
+ 
   public:
-   explicit FragmentDataIterator(const LayoutObject& object)
-       : FragmentDataIteratorBase(&object.FirstFragment()) {}
--  explicit FragmentDataIterator(nullptr_t)
-+  explicit FragmentDataIterator(std::nullptr_t)
-       : FragmentDataIteratorBase(nullptr) {}
- };
+   explicit FragmentDataIteratorBase(Head& head) : fragment_head_(head) {}
+-  explicit FragmentDataIteratorBase(nullptr_t) {}
++  explicit FragmentDataIteratorBase(std::nullptr_t) {}
  
-@@ -63,7 +63,7 @@ class MutableFragmentDataIterator
-   explicit MutableFragmentDataIterator(const LayoutObject& object)
-       : FragmentDataIteratorBase(
-             &object.GetMutableForPainting().FirstFragment()) {}
--  explicit MutableFragmentDataIterator(nullptr_t)
-+  explicit MutableFragmentDataIterator(std::nullptr_t)
-       : FragmentDataIteratorBase(nullptr) {}
- };
- 
+   Data* GetFragmentData() const {
+     return !IsDone() ? &fragment_head_.at(idx_) : nullptr;
