@@ -16,7 +16,7 @@ These are technically correct and should go upstream.
  #include <mutex>
 --- a/third_party/vulkan_memory_allocator/include/vk_mem_alloc.h
 +++ b/third_party/vulkan_memory_allocator/include/vk_mem_alloc.h
-@@ -2389,6 +2389,7 @@ VMA_CALL_PRE void VMA_CALL_POST vmaFreeV
+@@ -2619,6 +2619,7 @@ VMA_CALL_PRE void VMA_CALL_POST vmaFreeS
  #undef VMA_IMPLEMENTATION
  
  #include <cstdint>
@@ -26,7 +26,7 @@ These are technically correct and should go upstream.
  #include <utility>
 --- a/net/third_party/quiche/src/quiche/quic/core/qpack/qpack_stream_sender_delegate.h
 +++ b/net/third_party/quiche/src/quiche/quic/core/qpack/qpack_stream_sender_delegate.h
-@@ -7,6 +7,7 @@
+@@ -9,6 +9,7 @@
  
  #include "absl/strings/string_view.h"
  #include "quiche/quic/platform/api/quic_export.h"
@@ -34,4 +34,3 @@ These are technically correct and should go upstream.
  
  namespace quic {
  
-
