@@ -11,8 +11,8 @@ https://github.com/ungoogled-software/ungoogled-chromium/blob/master/patches/cor
 -             base::FEATURE_ENABLED_BY_DEFAULT);
 +             base::FEATURE_DISABLED_BY_DEFAULT);
  
- BASE_FEATURE(kAttributionReportingNullAggregatableReports,
-              "AttributionReportingNullAggregatableReports",
+ BASE_FEATURE(kAttributionReportingTriggerConfig,
+              "AttributionReportingTriggerConfig",
 --- a/components/privacy_sandbox/privacy_sandbox_prefs.cc
 +++ b/components/privacy_sandbox/privacy_sandbox_prefs.cc
 @@ -12,7 +12,7 @@ namespace privacy_sandbox {
@@ -26,7 +26,7 @@ https://github.com/ungoogled-software/ungoogled-chromium/blob/master/patches/cor
    registry->RegisterBooleanPref(prefs::kPrivacySandboxM1ConsentDecisionMade,
 --- a/components/privacy_sandbox/privacy_sandbox_settings_impl.cc
 +++ b/components/privacy_sandbox/privacy_sandbox_settings_impl.cc
-@@ -120,7 +120,7 @@ std::set<browsing_topics::Topic> GetTopi
+@@ -121,7 +121,7 @@ std::set<browsing_topics::Topic> GetTopi
  
  // static
  bool PrivacySandboxSettingsImpl::IsAllowed(Status status) {
@@ -35,7 +35,7 @@ https://github.com/ungoogled-software/ungoogled-chromium/blob/master/patches/cor
  }
  
  // static
-@@ -728,20 +728,7 @@ bool PrivacySandboxSettingsImpl::IsPriva
+@@ -753,20 +753,7 @@ bool PrivacySandboxSettingsImpl::IsPriva
  }
  
  bool PrivacySandboxSettingsImpl::IsPrivacySandboxEnabled() const {
@@ -57,7 +57,7 @@ https://github.com/ungoogled-software/ungoogled-chromium/blob/master/patches/cor
  }
  
  void PrivacySandboxSettingsImpl::SetAllPrivacySandboxAllowedForTesting() {
-@@ -766,11 +753,10 @@ void PrivacySandboxSettingsImpl::SetTopi
+@@ -791,11 +778,10 @@ void PrivacySandboxSettingsImpl::SetTopi
  }
  
  void PrivacySandboxSettingsImpl::SetPrivacySandboxEnabled(bool enabled) {
@@ -70,7 +70,7 @@ https://github.com/ungoogled-software/ungoogled-chromium/blob/master/patches/cor
  }
  
  bool PrivacySandboxSettingsImpl::IsPrivacySandboxCurrentlyUnrestricted() const {
-@@ -857,11 +843,7 @@ PrivacySandboxSettingsImpl::GetPrivacySa
+@@ -882,11 +868,7 @@ PrivacySandboxSettingsImpl::GetPrivacySa
      return Status::kIncognitoProfile;
    }
  
