@@ -1,7 +1,6 @@
-
 --- a/chrome/browser/BUILD.gn
 +++ b/chrome/browser/BUILD.gn
-@@ -3511,7 +3511,6 @@ static_library("browser") {
+@@ -3556,7 +3556,6 @@ static_library("browser") {
        "//components/embedder_support/android:util",
        "//components/embedder_support/android:web_contents_delegate",
        "//components/endpoint_fetcher:endpoint_fetcher",
@@ -11,7 +10,7 @@
        "//components/favicon/core:database",
 --- a/components/BUILD.gn
 +++ b/components/BUILD.gn
-@@ -597,7 +597,6 @@ test("components_unittests") {
+@@ -601,7 +601,6 @@ test("components_unittests") {
        "//components/embedder_support/android:native_java_unittests_java",
        "//components/embedder_support/android/metrics:test_support_java",
        "//components/embedder_support/android/metrics:unit_tests",
@@ -49,7 +48,7 @@
  void AndroidEnvironmentIntegrityService::OnGetHandle(
 --- a/content/browser/browser_interface_binders.cc
 +++ b/content/browser/browser_interface_binders.cc
-@@ -130,7 +130,6 @@
+@@ -129,7 +129,6 @@
  #include "third_party/blink/public/mojom/cookie_store/cookie_store.mojom.h"
  #include "third_party/blink/public/mojom/credentialmanagement/credential_manager.mojom.h"
  #include "third_party/blink/public/mojom/device/device.mojom.h"
@@ -57,7 +56,7 @@
  #include "third_party/blink/public/mojom/feature_observer/feature_observer.mojom.h"
  #include "third_party/blink/public/mojom/file/file_utilities.mojom.h"
  #include "third_party/blink/public/mojom/file_system_access/file_system_access_manager.mojom.h"
-@@ -1140,10 +1139,6 @@ void PopulateBinderMapWithContext(
+@@ -1150,10 +1149,6 @@ void PopulateBinderMapWithContext(
      map->Add<blink::mojom::BrowsingTopicsDocumentService>(
          base::BindRepeating(&BrowsingTopicsDocumentHost::CreateMojoService));
    }
@@ -65,9 +64,9 @@
 -    map->Add<blink::mojom::EnvironmentIntegrityService>(base::BindRepeating(
 -        &EmptyBinderForFrame<blink::mojom::EnvironmentIntegrityService>));
 -  }
-   if (base::FeatureList::IsEnabled(
-           features::kCookieDeprecationFacilitatedTesting)) {
-     map->Add<blink::mojom::CookieDeprecationLabelDocumentService>(
+ #if !BUILDFLAG(IS_ANDROID)
+   map->Add<blink::mojom::DirectSocketsService>(
+       base::BindRepeating(&DirectSocketsServiceImpl::CreateForFrame));
 --- a/third_party/blink/public/mojom/BUILD.gn
 +++ b/third_party/blink/public/mojom/BUILD.gn
 @@ -66,7 +66,6 @@ mojom("mojom_platform") {
@@ -80,7 +79,7 @@
      "fenced_frame/fenced_frame_config.mojom",
 --- a/third_party/blink/renderer/bindings/generated_in_modules.gni
 +++ b/third_party/blink/renderer/bindings/generated_in_modules.gni
-@@ -1921,8 +1921,6 @@ generated_interface_sources_in_modules =
+@@ -1936,8 +1936,6 @@ generated_interface_sources_in_modules =
    "$root_gen_dir/third_party/blink/renderer/bindings/modules/v8/v8_entry.h",
    "$root_gen_dir/third_party/blink/renderer/bindings/modules/v8/v8_entry_sync.cc",
    "$root_gen_dir/third_party/blink/renderer/bindings/modules/v8/v8_entry_sync.h",
@@ -102,7 +101,7 @@
    "//third_party/blink/renderer/modules/eyedropper/color_selection_options.idl",
 --- a/third_party/blink/renderer/core/origin_trials/origin_trial_context.cc
 +++ b/third_party/blink/renderer/core/origin_trials/origin_trial_context.cc
-@@ -550,10 +550,6 @@ bool OriginTrialContext::CanEnableTrialF
+@@ -553,10 +553,6 @@ bool OriginTrialContext::CanEnableTrialF
      return base::FeatureList::IsEnabled(features::kComputePressure);
    }
  
@@ -115,7 +114,7 @@
  
 --- a/third_party/blink/renderer/modules/BUILD.gn
 +++ b/third_party/blink/renderer/modules/BUILD.gn
-@@ -90,7 +90,6 @@ component("modules") {
+@@ -91,7 +91,6 @@ component("modules") {
      "//third_party/blink/renderer/modules/donottrack",
      "//third_party/blink/renderer/modules/encoding",
      "//third_party/blink/renderer/modules/encryptedmedia",
@@ -125,7 +124,7 @@
      "//third_party/blink/renderer/modules/eyedropper",
 --- a/third_party/blink/renderer/platform/runtime_enabled_features.json5
 +++ b/third_party/blink/renderer/platform/runtime_enabled_features.json5
-@@ -4180,17 +4180,6 @@
+@@ -4290,17 +4290,6 @@
        base_feature: "none",
      },
      {
